--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/global-theme.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Vancouver Yoga</title>
     </head>
@@ -19,10 +20,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-4 col-md-4">
-                    <div class="circle-btn crown-chakra">&nbsp;</div>
-                    Safe
-                </div>
+                <a href="studio-list.html">
+                    <div class="col-xs-4 col-md-4">
+                        <div class="circle-btn crown-chakra">&nbsp;</div>
+                        Safe
+                    </div>
+                </a>
                 <div class="col-xs-4 col-md-4">
                     <div class="circle-btn temple-chakra">&nbsp;</div>
                     Happy
