Fixed icons, added style listing page

--- a/www/index.html
+++ b/www/index.html
@@ -6,60 +6,68 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <link href='http://fonts.googleapis.com/css?family=Roboto:100,200' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="css/global-theme.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Vancouver Yoga</title>
     </head>
     <body>
-        <div class="container text-center">
-            <div class="row">
+        <div class="container">
+            <div class="row  text-center">
                 <div class="col-md-12">
                     <h1 class="headline"><nobr>How would you</nobr> <nobr>like to feel?</nobr></h1>
                     <p class="tagline">Let's find the right class for you.</p>
                 </div>
             </div>
             <div class="row">
-                <a href="studio-list.html">
-                    <div class="col-xs-4 col-md-4">
-                        <div class="circle-btn crown-chakra">&nbsp;</div>
-                        Safe
+                <a href="style-list.html">
+                    <div class="col-xs-12 mood-listing">
+                        <div class="circle-btn crown-chakra-circle">&nbsp;</div> <span>Safe</span>
                     </div>
                 </a>
-                <div class="col-xs-4 col-md-4">
-                    <div class="circle-btn temple-chakra">&nbsp;</div>
-                    Happy
-                </div>
-                <div class="col-xs-4 col-md-4">
-                    <div class="circle-btn throat-chakra">&nbsp;</div>
-                    Relaxed
-                </div>
             </div>
             <div class="row">
-                <div class="col-xs-4 col-md-4">
-                    <div class="circle-btn heart-chakra">&nbsp;</div>
-                    Focused
-                </div>
-                <div class="col-xs-4 col-md-4">
-                    <div class="circle-btn solar-plexus-chakra">&nbsp;</div>
-                    Fit
-                </div>
-                <div class="col-xs-4 col-md-4">
-                    <div class="circle-btn sacral-chakra">&nbsp;</div>
-                    Strong
-                </div>
+                <a href="style-list.html">
+                    <div class="col-xs-12 mood-listing">
+                        <div class="circle-btn temple-chakra-circle">&nbsp;</div> <span>Happy</span>
+                    </div>
+                </a>
             </div>
             <div class="row">
-                <div class="col-xs-4 col-md-4">
-                    &nbsp;
-                </div>
-                <div class="col-xs-4 col-md-4">
-                    <div class="circle-btn root-chakra">&nbsp;</div>
-                    Enlightened
-                </div>
-                <div class="col-xs-4 col-md-4">
-                    &nbsp;
-                </div>
+                <a href="style-list.html">
+                    <div class="col-xs-12 mood-listing">
+                        <div class="circle-btn throat-chakra-circle">&nbsp;</div> <span>Relaxed</span>
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+                <a href="style-list.html">
+                    <div class="col-xs-12 mood-listing">
+                        <div class="circle-btn heart-chakra-circle">&nbsp;</div> <span>Focused</span>
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+                <a href="style-list.html">
+                    <div class="col-xs-12 mood-listing">
+                        <div class="circle-btn solar-plexus-chakra-circle">&nbsp;</div> <span>Fit</span>
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+                <a href="style-list.html">
+                    <div class="col-xs-12 mood-listing">
+                        <div class="circle-btn sacral-chakra-circle">&nbsp;</div> <span>Strong</span>
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+                <a href="style-list.html">
+                    <div class="col-xs-12 mood-listing">
+                        <div class="circle-btn root-chakra-circle">&nbsp;</div> <span>Enlightened</span>
+                    </div>
+                </a>
             </div>
         </div>
         <script src="js/jquery-2.1.1.min.js"></script>
