--- a/www/studio-list.html
+++ b/www/studio-list.html
@@ -6,6 +6,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="css/global-theme.css" />
         <link rel="stylesheet" type="text/css" href="css/studio-list.css" />
@@ -13,7 +14,8 @@
     </head>
     <body>
         <div class="title-bar crown-chakra">
-            <h1>Beginners</h1>
+            <h1>Hatha studios</h1>
+            <p>The following Vancouver yoga studios offer Hatha classes. Check out their websites to find a class that works for you.</p>
         </div>
         <div class="studio-photo pull-right">
             <img src="img/just_yoga_small.jpg" />
