--- a/www/studio-list.html
+++ b/www/studio-list.html
@@ -33,6 +33,7 @@
         </div>
 
         <script src="js/jquery-2.1.1.min.js"></script>
+        <script src="js/angular.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
