--- a/www/index.html
+++ b/www/index.html
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
-<html ng-app="moodService">
+<html ng-app="appService">
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+
         <link href='http://fonts.googleapis.com/css?family=Roboto:100,200' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+
         <link rel="stylesheet" type="text/css" href="css/global-theme.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Vancouver Yoga</title>
     </head>
     <body>
-        <div class="container" ng-controller="MoodController as moodCtrl">
-            <div class="row  text-center">
-                <div class="col-md-12">
-                    <h1 class="headline"><nobr>How would you</nobr> <nobr>like to feel?</nobr></h1>
-                    <p class="tagline">Let's find the right class for you.</p>
-                </div>
-            </div>
-            <div class="row" ng-repeat="mood in moodCtrl.moods">
-                <a href="style-list.html">
-                    <div class="col-xs-12 mood-listing">
-                        <div class="circle-btn {{mood.chakra}}-chakra-circle">&nbsp;</div> <span>{{mood.name}}</span>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <script src="js/jquery-2.1.1.min.js"></script>
-        <script src="js/angular.min.js"></script>
-        <script src="js/jquery.backstretch.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <div ng-view></div>
 
-        <script src="js/mood-service.js"></script>
+
+        <script src="bower_components/jquery/jquery.min.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/angular-route/angular-route.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="bower_components/jquery-backstretch/jquery.backstretch.min.js"></script>
+
+        <script src="js/app-service.js"></script>
 
         <script type="text/javascript">
         $.backstretch("img/yoga-bg-02.jpg");
