--- a/www/studio-list.html
+++ b/www/studio-list.html
@@ -7,7 +7,8 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+
         <link rel="stylesheet" type="text/css" href="css/global-theme.css" />
         <link rel="stylesheet" type="text/css" href="css/studio-list.css" />
         <title>Vancouver Yoga</title>
@@ -32,8 +33,8 @@
             <p>No more studios</p>
         </div>
 
-        <script src="js/jquery-2.1.1.min.js"></script>
-        <script src="js/angular.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="bower_components/jquery/jquery.min.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
