--- a/www/style-list.html
+++ b/www/style-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="styleService">
+<html ng-app="appService">
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
@@ -7,14 +7,15 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+
         <link rel="stylesheet" type="text/css" href="css/global-theme.css" />
         <link rel="stylesheet" type="text/css" href="css/style-list.css" />
         <title>Vancouver Yoga</title>
     </head>
-    <body>
-        <div class="title-bar crown-chakra">
-            <h1>Happy styles</h1>
+    <body ng-controller="SelectedMoodController as selectedMoodCtrl">
+        <div class="title-bar {{selectedMoodCtrl.selectedMood.chakra}}-chakra">
+            <h1>{{selectedMoodCtrl.selectedMood.name}} styles</h1>
             <p>The following styles promote happiness. Choose one that appeals to you.</p>
         </div>
         <div class="containter list-bin" ng-controller="StyleController as styleCtrl">
@@ -27,10 +28,10 @@
                 </a>
             </div>
         </div>
-        <script src="js/jquery-2.1.1.min.js"></script>
-        <script src="js/angular.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="bower_components/jquery/jquery.min.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-        <script src="js/style-service.js"></script>
+        <script src="js/app-service.js"></script>
     </body>
 </html>
