--- a/www/index.html
+++ b/www/index.html
@@ -10,13 +10,15 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:100,200' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 
-        <link rel="stylesheet" type="text/css" href="css/global-theme.css" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/global.css" />
+        <link rel="stylesheet" type="text/css" href="css/styles.css" />
+        <link rel="stylesheet" type="text/css" href="css/moods.css" />
         <title>Vancouver Yoga</title>
     </head>
     <body>
-        <div ng-view></div>
 
+        <div ng-view></div>
+        
 
         <script src="bower_components/jquery/jquery.min.js"></script>
         <script src="bower_components/angular/angular.min.js"></script>
@@ -26,8 +28,7 @@
 
         <script src="js/app-service.js"></script>
 
-        <script type="text/javascript">
-        $.backstretch("img/yoga-bg-02.jpg");
-        </script>
+
+
     </body>
 </html>
