--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/global.css" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
+        <link rel="stylesheet" type="text/css" href="css/studios.css" />
         <link rel="stylesheet" type="text/css" href="css/moods.css" />
         <title>Vancouver Yoga</title>
     </head>
