--- a/www/styles.html
+++ b/www/styles.html
@@ -4,7 +4,7 @@
         <p>{{styleCtrl.selectedMood.styleIntro}} Choose one that appeals to you.</p>
     </div>
     <div class="containter list-bin">
-        <div class="row style-listing" ng-repeat="style in styleCtrl.styles">
+        <div class="row style-listing" ng-repeat="style in styleCtrl.getStylesByMood(styleCtrl.selectedMood)">
             <a href="#/studios?style={{style.name}}">
                 <div class="col-xs-12">
                     <h2>{{style.name}}</h2>
