Implement prototype of class listings by style

--- a/www/styles.html
+++ b/www/styles.html
@@ -5,7 +5,7 @@
     </div>
     <div class="containter list-bin">
         <div class="row style-listing" ng-repeat="style in styleCtrl.getStylesByMood(styleCtrl.selectedMood)">
-            <a href="#/studios?style={{style.name}}">
+            <a href="#/classes?style={{style.name}}">
                 <div class="col-xs-12">
                     <h2>{{style.name}}</h2>
                     <p>{{style.description}}</p>
