--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="css/global.css" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
         <link rel="stylesheet" type="text/css" href="css/studios.css" />
+        <link rel="stylesheet" type="text/css" href="css/classes.css" />
         <link rel="stylesheet" type="text/css" href="css/moods.css" />
         <title>Vancouver Yoga</title>
     </head>
