--- a/www/studios.html
+++ b/www/studios.html
@@ -10,7 +10,7 @@
         <div class="studio-listing">
 
             <p class="studio-name">{{studio.name}}</p>
-            <p class="studio-address">{{studio.address}}</p>
+            <p class="studio-address">{{studio.address.street}}</p>
             <p class="studio-link"><a href ng-click="studioCtrl.launchWebsite(studio.website);">{{studio.website}}</a></p>
 
         </div>
