--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
 
-        <div ng-view></div>
+        <div ng-view autoscroll></div>
         
 
         <script src="bower_components/jquery/jquery.min.js"></script>
