Fix banner on style selection screen

--- a/www/styles.html
+++ b/www/styles.html
@@ -1,5 +1,5 @@
 <div class="styles">
-    <div class="title-bar {{styleCtrl.selectedMood.chakra}}-chakra">
+    <div class="title-bar crown-chakra">
         <h1>{{styleCtrl.selectedMood.name}} styles</h1>
         <p>{{styleCtrl.selectedMood.styleIntro}} Choose one that appeals to you.</p>
     </div>
