Filter classes by day

--- a/www/classes.html
+++ b/www/classes.html
@@ -2,6 +2,17 @@
     <div class="title-bar crown-chakra">
         <h1>{{classCtrl.selectedStyle.name}} classes</h1>
         <p>Here are some {{studioCtrl.selectedStyle.name}} classes near you. Check studio websites for details about attending.</p>
+        <p>Showing classes for: 
+            <select ng-model="classCtrl.dayFilter" ng-change="classCtrl.refreshClasses();">
+                <option value="sun">Sunday</option>
+                <option value="mon">Monday</option>
+                <option value="tue">Tuesday</option>
+                <option value="wed">Wednesday</option>
+                <option value="thu">Thursday</option>
+                <option value="fri">Friday</option>
+                <option value="sat">Saturday</option>
+            </select>
+        </p>
     </div>
     <div ng-repeat="class in classCtrl.classes">
         <div class="studio-photo pull-right">
