Fix issue where classes disappear after selcting same day for second time

--- a/www/classes.html
+++ b/www/classes.html
@@ -21,7 +21,7 @@
         <div class="class-listing clearfix">
             <div class="class-details pull-left">
                 <p class="class-name">{{class.name}}</p>
-                <p class="class-time">{{class.time}}, {{class.day}}</p>
+                <p class="class-time">{{class.time}}, {{class.day | weekday}}</p>
 
             </div>
             <div class="studio-details pull-left">
