--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="bower_components/jquery-backstretch/jquery.backstretch.min.js"></script>
 
+        <script src="js/filters.js"></script>
         <script src="js/app-service.js"></script>
 
 
