--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,6 @@
     <body>
 
         <div ng-view autoscroll></div>
-        
 
         <script src="bower_components/jquery/jquery.min.js"></script>
         <script src="bower_components/angular/angular.min.js"></script>
@@ -30,8 +29,7 @@
 
         <script src="js/filters.js"></script>
         <script src="js/app-service.js"></script>
-
-
+        <script src="cordova.js"></script>
 
     </body>
 </html>
