Fix wording on class listing

--- a/www/classes.html
+++ b/www/classes.html
@@ -33,6 +33,6 @@
     </div>
 
     <div class="end-of-listing">
-        <p>No more studios</p>
+        <p>No more classes</p>
     </div>
 </div>
